[package]
name = "flake-tools"
description = "Utilities for working with nix flakes"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/flake-tools"
repository = "https://github.com/adam-gaia/flake-tools"

[[bin]]
name = "flake"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.25", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.22"
s-string = "1.0.0"
thiserror = "2.0.11"
which = "7.0.2"
winnow = "0.7.1"

