[package]
name = "flake-tools"
description = "Utilities for working with nix flakes"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/flake-tools"
repository = "https://github.com/adam-gaia/flake-tools"

[[bin]]
name = "flake"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.25", features = ["derive"] }
env_logger = "0.11.6"
eyre = "0.6.12"
log = "0.4.22"
s-string = "1.0.0"
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros"] }
tokio-stream = "0.1.17"
which = "7.0.2"
winnow = "0.7.1"
xcommand = "0.1.0"

